--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,45 +11,45 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama" />
+        android:text="@string/nama" />
 
     <EditText
         android:id="@+id/namaEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Isi Nama Anda"
+        android:hint="@string/isi_nama_anda"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email" />
+        android:text="@string/email" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Isi Dengan Email Yang Benar"
+        android:hint="@string/isi_dengan_email_yang_benar"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No Handphone"
+        android:text="@string/no_handphone"
         />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="phone"
-        android:hint="Masukkan Nomor Handphone"
+        android:hint="@string/masukkan_nomor_handphone"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tanggal Lahir" />
+        android:text="@string/tanggal_lahir" />
 
     <EditText
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Jarak (km)" />
+        android:text="@string/jarak_km" />
 
     <EditText
         android:layout_width="match_parent"
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/succes"
-            android:text="Simpan"
+            android:text="@string/simpan"
             android:layout_marginEnd="8dp"
             android:drawableLeft="@drawable/ic_baseline_save_24"
 
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/danger"
-            android:text="Batal"
+            android:text="@string/batal"
             android:drawableLeft="@drawable/ic_baseline_cancel_24"
             />
     </LinearLayout>
