--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:text="@string/email" />
 
     <EditText
+        android:id="@+id/emailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -40,6 +41,7 @@
         />
 
     <EditText
+        android:id="@+id/noHandphoneEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="phone"
@@ -52,6 +54,7 @@
         android:text="@string/tanggal_lahir" />
 
     <EditText
+        android:id="@+id/tanggalLahirEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="date"
@@ -63,6 +66,7 @@
         android:text="@string/jarak_km" />
 
     <EditText
+        android:id="@+id/jarakEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
